# django-spicedb

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  developers.md  docker-compose.yaml  planning.md  pyproject.toml  qa_test_report.md  test_htmx_hierarchy.py
.github/workflows/: ci.yml
django_rebac/: __init__.py  admin.py  apps.py  conf.py  core.py  models.py  schema.py  signals.py  tenant.py  urls.py  views.py
django_rebac/adapters/: __init__.py  base.py  factory.py  fake.py  spicedb.py
django_rebac/hierarchy/: __init__.py  signals.py
django_rebac/integrations/: __init__.py  orm.py
django_rebac/management/commands/: export_rebac_policy.py  setup_demo.py
django_rebac/migrations/: 0001_initial.py  0002_typedefinition_model.py  0003_resourcenode.py  0004_add_hierarchy_models.py  0005_alter_hierarchynoderole_role.py
django_rebac/runtime/: __init__.py  evaluator.py
django_rebac/sync/: __init__.py  backfill.py  registry.py
django_rebac/templates/django_rebac/: base.html  hierarchy_tree.html  invite_user.html  node_detail.html
django_rebac/templates/django_rebac/partials/: _hierarchy_tree.html  _node_roles.html  _role_form.html  _tree_node.html
django_rebac/templates/registration/: login.html
django_rebac/types/: __init__.py  graph.py
docs/: tutorial.md
example_project/: settings.py  urls.py
example_project/documents/: apps.py  models.py  signals.py
example_project/documents/migrations/: 0001_initial.py  0002_hierarchyresource.py  0003_add_company.py  0004_remove_document_resource_folder_document_folder.py  0005_group_verification.py  0006_alter_verification_group_delete_group.py  0007_add_custom_group_and_membership.py
qa_reports/: README.md  htmx_hierarchy_ui_detailed_test_report.md  htmx_hierarchy_ui_test_report.md  htmx_ui_test_results.json  test_summary.json
tests/: __init__.py  conftest.py  test_backfill.py  test_conf.py  test_factory.py  test_group_verification.py  test_group_verification_spicedb.py  test_hierarchy.py  test_hierarchy_advanced.py  test_hierarchy_integration.py  test_hierarchy_spicedb.py  test_hierarchy_views.py  test_runtime.py  test_schema.py  test_spicedb_adapter.py  test_sync.py  test_type_graph.py
tests/adapters/: test_fake_adapter.py
