[project]
name = "django-spicedb"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammed R. Ali",email = "flakgun153@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.7,<6.0.0)"
]

[tool.poetry]
packages = [{ include = "django_rebac" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
