[project]
name = "django-spicedb"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammed R. Ali",email = "flakgun153@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "authzed (>=1.23.0,<2.0.0)",
    "grpcio (>=1.75.1,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "django_rebac" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-django = "^4.11.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.settings"
python_files = ["tests/test_*.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
